# AutomatedTradingBot

./: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  cert.pem  cmake_install.cmake  key.pem
src/: bitrader.cpp  telegram_bot.cpp
tgbot-cpp/: CMakeLists.txt
tgbot-cpp/include/tgbot/: Api.h
tgbot-cpp/src/: Api.cpp  Bot.cpp  TgTypeParser.cpp
